# sysinfo

./: .cirrus.yml  .gitignore  .travis.yml  232  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  build.rs  funding.json  migration_guide.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  freebsd.yml  macos-m.yml  netbsd.yml
benches/: basic.rs
cmake/: sysinfoConfig.cmake.in
examples/: Cargo.toml  cpu_usage.rs  debug.rs  memory_usage.rs  simple.c  simple.rs
examples/c/: CMakeLists.txt  simple.c
examples/rust/: simple.rs
examples/src/: simple.c  simple.rs
md_doc/: component.md  components.md  cpu.md  disk.md  gpu.md  is_supported.md  network_data.md  networks.md  pid.md  process.md  processor.md  serde.md  supported_signals.md  system.md  user.md
src/: c_interface.rs  common.rs  component.rs  debug.rs  enums.rs  errors.rs  ffi.rs  io.rs  lib.rs  macros.rs  net.rs  network.rs  network_helper_nix.rs  network_helper_win.rs  pcis.rs  process.rs  processor.rs  processus.rs  serde.rs  socket.rs  sysinfo.h  sysinfo.rs  system.rs  traits.rs  users.rs  utils.rs
src/apple/: component.rs  cpu.rs  disk.rs  ffi.rs  ios.rs  mod.rs  network.rs  process.rs  processor.rs  system.rs  users.rs  utils.rs
src/apple/app_store/: component.rs  mod.rs  process.rs
src/apple/ios/: component.rs  mod.rs  process.rs
src/apple/macos/: component.rs  disk.rs  ffi.rs  mod.rs  process.rs  system.rs  utils.rs
src/apple/macos/component/: arm.rs  mod.rs  x86.rs
src/common/: component.rs  disk.rs  ffi.rs  gpu.rs  impl_get_set.rs  mod.rs  network.rs  system.rs  user.rs
src/enum/: process_status.rs
src/freebsd/: component.rs  cpu.rs  disk.rs  ffi.rs  mod.rs  network.rs  process.rs  processor.rs  system.rs  users.rs  utils.rs
src/linux/: component.rs  cpu.rs  disk.rs  ffi.rs  gpu.rs  mod.rs  network.rs  process.rs  processor.rs  system.rs  users.rs  utils.rs
src/mac/: component.rs  disk.m  disk.rs  ffi.rs  mod.rs  network.rs  process.rs  processor.rs  system.rs  users.rs  utils.rs
src/mac/component/: mod.rs
src/mac/disk/: ios.rs  mod.rs
src/unix/: groups.rs  mod.rs  network_helper.rs  users.rs  utils.rs
src/unix/apple/: cpu.rs  disk.rs  ffi.rs  gpu.rs  groups.rs  ios.rs  mod.rs  models_name.rs  motherboard.rs  network.rs  process.rs  product.rs  system.rs  users.rs  utils.rs
src/unix/apple/app_store/: component.rs  mod.rs  process.rs  users.rs
src/unix/apple/macos/: cpu.rs  disk.rs  ffi.rs  mod.rs  process.rs  system.rs  utils.rs
src/unix/apple/macos/component/: arm.rs  x86.rs
src/unix/bsd/: common.rs  mod.rs  network_common.rs  system_common.rs
src/unix/bsd/freebsd/: component.rs  cpu.rs  disk.rs  ffi.rs  mod.rs  motherboard.rs  network.rs  process.rs  product.rs  system.rs  utils.rs
src/unix/bsd/netbsd/: component.rs  cpu.rs  disk.rs  ffi.rs  mod.rs  motherboard.rs  network.rs  process.rs  product.rs  system.rs  utils.rs
src/unix/freebsd/: component.rs  cpu.rs  disk.rs  ffi.rs  mod.rs  motherboard.rs  network.rs  process.rs  system.rs  utils.rs
src/unix/linux/: cgroup.rs  component.rs  cpu.rs  disk.rs  gpu.rs  mod.rs  motherboard.rs  network.rs  process.rs  product.rs  system.rs  utils.rs
src/unknown/: component.rs  cpu.rs  disk.rs  gpu.rs  groups.rs  mod.rs  motherboard.rs  network.rs  process.rs  processor.rs  product.rs  system.rs  users.rs
src/windows/: component.rs  cpu.rs  disk.rs  ffi.rs  gpu.rs  groups.rs  macros.rs  mod.rs  motherboard.rs  network.rs  network_helper.rs  process.rs  processor.rs  product.rs  sid.rs  system.rs  tools.rs  users.rs  utils.rs
test-unknown/: Cargo.toml
test-unknown/src/: lib.rs
test_bin/: main.rs
tests/: cgroup_integration.rs  components.rs  cpu.rs  disk.rs  disk_list.rs  disks.rs  network.rs  process.rs  processor.rs  send_sync.rs  serde.rs  system.rs  uptime.rs  users.rs
tests/code_checkers/: docs.rs  headers.rs  mod.rs  signals.rs  utils.rs
