[package]
name = "sysinfo"
version = "0.30.13"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
description = "Library to get system information such as processes, CPUs, disks, components and networks"
repository = "https://github.com/GuillaumeGomez/sysinfo"
license = "MIT"
readme = "README.md"
rust-version = "1.74"
exclude = ["/test-unknown"]
keywords = ["system-information", "disk", "process", "network", "cpu"]
edition = "2021"

[lib]
name = "sysinfo"

[features]
default = ["component", "disk", "system", "multithread"]
component = [
    "windows/Win32_System_Com",
    "windows/Win32_System_Rpc",
    "windows/Win32_System_Variant",
    "windows/Win32_System_Wmi",
]
disk = [
    "windows/Win32_Storage_FileSystem",
    "windows/Win32_System_IO",
    "windows/Win32_System_Ioctl",
    "windows/Win32_System_WindowsProgramming",
]
system = [
    "windows/Wdk_System_SystemInformation",
    "windows/Wdk_System_SystemServices",
    "windows/Wdk_System_Threading",
    "windows/Win32_System_Diagnostics_Debug",
    "windows/Win32_System_Kernel",
    "windows/Win32_System_Memory",
    "windows/Win32_System_Performance",
    "windows/Win32_System_Power",
    "windows/Win32_System_ProcessStatus",
    "windows/Win32_System_Registry",
    "windows/Win32_System_RemoteDesktop",
    "windows/Win32_System_SystemInformation",
    "windows/Win32_System_SystemServices",
    "windows/Win32_System_Threading",
    "windows/Win32_UI_Shell",
    "ntapi",
]
apple-sandbox = []
apple-app-store = ["apple-sandbox"]
c-interface = ["default"]
multithread = ["dep:rayon"]
linux-netdevs = []
linux-tmpfs = []
debug = ["libc/extra_traits"]
# This feature is used on CI to emulate unknown/unsupported target.
unknown-ci = []

[package.metadata.docs.rs]
features = ["serde"]
# Setting this default target to prevent `freebsd` to be the default one.
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "i686-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-unknown-freebsd",
]
cargo-args = ["-Zbuild-std"]
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
bstr = "1.9.0"
memchr = "2.7.1"
rayon = { version = "^1.8", optional = true }
serde = { version = "^1.0.190", optional = true }

[target.'cfg(windows)'.dependencies]
ntapi = { version = "0.4", optional = true }
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
]}

[target.'cfg(not(any(target_os = "unknown", target_arch = "wasm32")))'.dependencies]
libc = "^0.2.153"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation-sys = "0.8"

[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dev-dependencies]
tempfile = "3.9"

[dev-dependencies]
serde_json = "1.0" # Used in documentation tests.

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["default"]
