[package]
name = "test-unknown"
version = "0.1.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
description = "A project used to test unknown targets in sysinfo"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sysinfo = { path = "../" }
